--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -1,4 +1,11 @@
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+<link
+  rel="stylesheet"
+  href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
+  integrity="sha384-rGwRfUBFvZaE01lTVXZZLAg+dv50nvPupqoI1B/GBMYBmCqdaVNC7I3HuMI21bTx"
+  crossorigin="anonymous"
+/>
+
+<nav class="navbar navbar-expand-lg navbar-dark bg-black">
   <div class="container-fluid">
     <a class="navbar-brand" href="#">Blogify</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
@@ -10,34 +17,48 @@
           <a class="nav-link active" aria-current="page" href="/">Home</a>
         </li>
         <% if (locals.user) { %>
-          <li class="nav-item">
-            <a class="nav-link" href="/blog/add-new">Add Blog</a>
-          </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/blog/add-new">Add Blog</a>
+        </li>
         <% } %>
       </ul>
       <ul class="navbar-nav">
         <% if (locals.user) { %>
-          <li class="nav-item">
-            <a class="nav-link" href="/users/messages">Messages</a>  
-            <!-- <a class="nav-link" href="/blog/add-new"><i class="fas fa-bell"></i></a>   -->
-          </li>
-          <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-              <%= locals.user.fullname %>
-            </a>
-            <ul class="dropdown-menu">
-              <li><a class="dropdown-item" href="/users/editProfile">Edit Profile</a></li>
-              <li> <a class="dropdown-item" href="/users/bookmark">Bookmarks</a></li>
-              <li><a class="dropdown-item" href="/users/logout">Log Out</a></li>
-            </ul>
-          </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/users/messages">
+            <i class="fas fa-envelope mr-2"></i> Messages
+          </a>
+        </li>
+        <!-- Notifications section -->
+        <li class="nav-item">
+          <a class="nav-link" href="/users/notifications">
+            <i class="fas fa-bell mr-2"></i> Notifications
+          </a>
+        </li>
+        <!-- End Notifications section -->
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+            <%= locals.user.fullname %>
+          </a>
+          <ul class="dropdown-menu">
+            <li>
+              <a class="dropdown-item" href="/users/editProfile">Edit Profile</a>
+            </li>
+            <li>
+              <a class="dropdown-item" href="/users/bookmark">Bookmarks</a>
+            </li>
+            <li>
+              <a class="dropdown-item" href="/users/logout">Log Out</a>
+            </li>
+          </ul>
+        </li>
         <% } else { %>
-          <li class="nav-item">
-            <a class="nav-link" href="/users/signup">Sign Up</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="/users/signin">Login</a>
-          </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/users/signup">Sign Up</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/users/signin">Login</a>
+        </li>
         <% } %>
       </ul>
     </div>
@@ -45,9 +66,13 @@
 </nav>
 
 <% if (locals.error) { %>
-  <div class="container mt-4">
-    <div class="alert alert-danger" role="alert">
-      <%= locals.error %>
-    </div>
-  </div>
+<div class="container mt-4">
+  <div class="alert alert-danger" role="alert"><%= locals.error %></div>
+</div>
+<% } %>
+
+<% if (locals.error) { %>
+<div class="container mt-4">
+  <div class="alert alert-danger" role="alert"><%= locals.error %></div>
+</div>
 <% } %>
